tests/baselines/reference/genericArrayAssignment1(strict=true).errors.txt
genericArrayAssignment1.ts(4,1): error TS2322: Type 'number[]' is not assignable to type 'string[]'.
  Type 'number' is not assignable to type 'string'.
genericArrayAssignment1.ts(4,5): error TS2454: Variable 'n' is used before being assigned.


==== genericArrayAssignment1.ts (2 errors) ====
    var s: string[];
    var n: number[];
    
    s = n;
    ~
!!! error TS2322: Type 'number[]' is not assignable to type 'string[]'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
        ~
!!! error TS2454: Variable 'n' is used before being assigned.